calc minor css fix

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -14,23 +14,24 @@
         <p class="mainTab"></p>
       </div>
       <div class="calculator__main">
-        <div class="reset btn">AC</div>
-        <div class="delete operators btn">D</div>
+        <div class="reset del btn">AC</div>
+        <div class="delete del btn">D</div>
         <div class="btn">.</div>
-        <div class="add operators btn">+</div>
+        <div class="operators btn">+</div>
         <div class="num btn">1</div>
         <div class="num btn">2</div>
         <div class="num btn">3</div>
-        <div class="substraсt operators btn">-</div>
+        <div class="operators btn">-</div>
         <div class="num btn">4</div>
         <div class="num btn">5</div>
         <div class="num btn">6</div>
-        <div class="multiply operators btn">*</div>
+        <div class="operators btn">*</div>
         <div class="num btn">7</div>
         <div class="num btn">8</div>
         <div class="num btn">9</div>
-        <div class="divide operators btn">/</div>
+        <div class="operators btn">/</div>
         <div class="num btn">0</div>
+        <div class="btn">.</div>
         <div class="equal btn span-two">=</div>
       </div>
     </div>
