--- a/battleShip/index.html
+++ b/battleShip/index.html
@@ -12,8 +12,8 @@
     <main class="main">
       <div class="battlefield1 battlefield"></div>
       <div class="main__settings">
-        <button class="main__setting-reset">Reset</button>
-        <div class="main__setting-gamemove"></div>
+        <button class="main__setting-reset">Restart</button>
+        <div class="main__setting-gamemove hidden"></div>
       </div>
       <div class="battlefield2 battlefield"></div>
     </main>
